# attestation-verifier

./: .gitignore  Cargo.toml  README.md  example.json
examples/: verify_example.rs
src/: error.rs  lib.rs  main.rs
