[package]
name = "attestation_verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
base64 = "0.22"
dcap-qvl = { version = "0.3.11", default-features = false, features = ["std", "ring", "report"] }
tokio = { version = "1.49", features = ["full", "rt-multi-thread", "macros"] }
thiserror = "2.0"
