[package]
name = "attestation_verifier"
author = "protocolwhisper"
version = "0.1.0"
edition = "2021"
description = "Minimal Intel TDX quote verification crate for raw quotes, hex, or wrapped TDX JSON payloads"
documentation = "https://docs.rs/attestation_verifier"
keywords = ["tdx", "attestation", "dcap", "quote", "verification"]
categories = ["cryptography", "authentication"]
license = "MIT"


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
base64 = "0.22"
dcap-qvl = { version = "0.3.11", default-features = false, features = ["std", "ring", "report"] }
thiserror = "2.0"

[dev-dependencies]
tokio = { version = "1.49", features = ["macros", "rt-multi-thread"] }
