[package]
name = "attestation_verifier"
authors = ["protocolwhisper"]
version = "0.1.1"
edition = "2021"
description = "Minimal Intel TDX quote verification crate for raw quotes, hex, or wrapped TDX JSON payloads"
documentation = "https://docs.rs/attestation_verifier"
keywords = ["tdx", "attestation", "dcap", "quote", "verification"]
categories = ["cryptography", "authentication"]
license = "MIT"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
hex = "0.4.3"
base64 = "0.22.1"
dcap-qvl = { version = "0.3.12", default-features = false, features = ["std", "ring", "report"] }
thiserror = "2.0.18"

[dev-dependencies]
tokio = { version = "1.50", features = ["macros", "rt-multi-thread"] }
